fixed nav bar colors, z-indexed the hero image

--- a/less/index.less
+++ b/less/index.less
@@ -182,16 +182,16 @@ body {
   justify-content: flex-end;
   align-items: center;
   width: 100%;
-  background-color: #000;
+  background-color: rgba(0, 0, 0, .8);
   position: fixed;
+  height: 4rem;
 
   .nav__item {
     font-family: @font-secondary;
     font-size: 2.5rem;
     padding: 0 3rem;
     text-decoration: none;
-    color: @color-secondary;
-    background-color: #000;
+    color: @color-offwhite;
   }
   .nav__item:hover {
     color: @color-offwhite;
@@ -371,7 +371,7 @@ body {
 
   .contact {
     background-color: black;
-    color: @color-primary;
+    color: @color-secondary;
     .flexCenter;
     flex-direction: column;
     align-items: center;
